@startuml
'https://plantuml.com/sequence-diagra
/'
interface IDamageable
{
    public void TakeHit(Weapon weaponType)
}

interface IDoDamage
{
    public void ApplyDamage()
}

abstract class ScriptableObject
{

}

class Weapon extends ScriptableObject
{
    public int damage
    public float force
}
'/

class RaycastController
{
    //controls recasting for collision implementation
    raycastOrigins
    raycastSpread
}

class CharacterController2D
{
    Movement Functionality
    Ground Checking
    Gravity
}

class PlayerCharacterController
{
    CoordinatingPlayer's scripts
        - Input to Combat/Movement
        - etc.
}

'CombatBehaviour -> Weapon

PlayerCharacterController --> PlayerInputComponent
PlayerCharacterController --> CombatBehaviour
PlayerCharacterController --> CharacterController2D

RaycastController ..>CharacterController2D

@enduml
